[package]
name = "laundry-relayer"
version = "0.1.0"
edition = "2021"
authors = ["Laundry Cash"]
description = "Relayer node for Laundry Cash privacy protocol"
license = "MIT"

[[bin]]
name = "relayer"
path = "src/main.rs"

[dependencies]
# Local crypto library
laundry-crypto = { path = "../crypto" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Ethereum interaction
ethers = { version = "2.0", features = ["rustls", "ws"] }
alloy-primitives = "0.6"

# HTTP server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# P2P networking
libp2p = { version = "0.53", features = ["tcp", "noise", "yamux", "gossipsub", "kad", "identify"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "migrate"] }

# Configuration
config = "0.14"
clap = { version = "4.4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
